src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/EXTSeparateShaderObjects_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTSeparateShaderObjects_StringErrorContext.class */
public final class EXTSeparateShaderObjects_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glUseShaderProgramEXT(II)V", "net/labymod/core/laby3d/opengl/error/generated/EXTSeparateShaderObjectsErrorContext");
        methods.put("glActiveProgramEXT(I)V", "net/labymod/core/laby3d/opengl/error/generated/EXTSeparateShaderObjectsErrorContext");
        methods.put("nglCreateShaderProgramEXT(IJ)I", "net/labymod/core/laby3d/opengl/error/generated/EXTSeparateShaderObjectsErrorContext");
        methods.put("glCreateShaderProgramEXT(ILjava/nio/ByteBuffer;)I", "net/labymod/core/laby3d/opengl/error/generated/EXTSeparateShaderObjectsErrorContext");
        methods.put("glCreateShaderProgramEXT(ILjava/lang/CharSequence;)I", "net/labymod/core/laby3d/opengl/error/generated/EXTSeparateShaderObjectsErrorContext");
        return methods;
    }
}
